# tshlib

./: .gitignore  CMakeLists.txt  CREDITS.txt  README.md  TshLibConfig.cmake.in  TshLibConfigVersion.cmake.in  bitbucket-pipelines.yml  deprecated.cpp  deprecated.hpp  main.cpp  main.hpp
benchmarks/: CMakeLists.txt  exec.sh  generateBenchmarkPlots.R  generateRandomTrees.R  main.cpp  main.hpp  tree_1005_debug.csv  tree_1005_intel.csv  tree_1005_release.csv  tree_105_debug.csv  tree_105_intel.csv  tree_105_release.csv  tree_115_debug.csv  tree_115_intel.csv  tree_115_release.csv  tree_125_debug.csv  tree_125_intel.csv  tree_125_release.csv  tree_135_debug.csv  tree_135_intel.csv  tree_135_release.csv  tree_145_debug.csv  tree_145_intel.csv  tree_145_release.csv  tree_155_debug.csv  tree_155_intel.csv  tree_155_release.csv  tree_15_debug.csv  tree_15_intel.csv  tree_15_pll.csv  tree_15_release.csv  tree_165_debug.csv  tree_165_intel.csv  tree_165_release.csv  tree_175_debug.csv  tree_175_intel.csv  tree_175_release.csv  tree_185_debug.csv  tree_185_intel.csv  tree_185_release.csv  (+277 more)
benchmarks/data/: tree_1005.nwk  tree_105.nwk  tree_115.nwk  tree_125.nwk  tree_135.nwk  tree_145.nwk  tree_15.nwk  tree_155.nwk  tree_165.nwk  tree_175.nwk  tree_185.nwk  tree_195.nwk  tree_205.nwk  tree_215.nwk  tree_225.nwk  tree_235.nwk  tree_245.nwk  tree_25.nwk  tree_255.nwk  tree_265.nwk  tree_275.nwk  tree_285.nwk  tree_295.nwk  tree_305.nwk  tree_315.nwk  tree_325.nwk  tree_335.nwk  tree_345.nwk  tree_35.nwk  tree_355.nwk  tree_365.nwk  tree_375.nwk  tree_385.nwk  tree_395.nwk  tree_405.nwk  tree_415.nwk  tree_425.nwk  tree_435.nwk  tree_445.nwk  tree_45.nwk  (+61 more)
data/: tree_5_leaves_r_bl.nwk  tree_5_leaves_ur_bl.nwk  tree_64_leaves.nwk
docker_conf/: Dockerfile
include/: Alignment.hpp  Alphabet.hpp  Likelihood.hpp  ModelFactory.hpp  Model_JC69.hpp  Model_K80.hpp  Model_PIP.hpp  Move.hpp  Optimiser.hpp  Optimization_Brent.hpp  Sequence.hpp  TreeRearrangment.hpp  TreeSearch.hpp  Utilities.hpp  Utree.hpp
lib/DP/: CMakeLists.txt  DownloadProject.cmake  example.cpp
lib/googletest-master/googlemock/include/gmock/: gmock-generated-matchers.h.pump
lib/googletest-master/googlemock/msvc/2005/: gmock.sln
lib/googletest-master/googlemock/msvc/2010/: gmock.sln  gmock.vcxproj  gmock_config.props  gmock_main.vcxproj  gmock_test.vcxproj
lib/googletest-master/googletest/: CHANGES
lib/googletest-master/googletest/codegear/: gtest.cbproj  gtest.groupproj  gtest_main.cbproj  gtest_unittest.cbproj
lib/loguru/: README.md  loguru.hpp
old/: Alignment.cpp  Alignment.hpp  Alphabet.cpp  Alphabet.hpp  Likelihood.cpp  Likelihood.hpp  ModelFactory.cpp  ModelFactory.hpp  Model_JC69.cpp  Model_JC69.hpp  Model_K80.cpp  Model_K80.hpp  Model_PIP.cpp  Model_PIP.hpp  Optimiser.cpp  Optimiser.hpp  Optimization_Brent.cpp  Optimization_Brent.hpp  PhyTree.cpp  PhyTree.hpp  Sequence.cpp  Sequence.hpp  newick.cpp  newick.hpp
src/: Alignment.cpp  Alignment.hpp  Alphabet.cpp  Alphabet.h  CMakeLists.txt  Likelihood.cpp  Likelihood.hpp  Model.cpp  Model.hpp  ModelFactory.cpp  ModelFactory.hpp  Model_JC69.cpp  Model_K80.cpp  Model_PIP.cpp  Move.cpp  Optimiser.cpp  Optimiser.hpp  Optimization_Brent.cpp  Optimization_Brent.hpp  PhyTree.cpp  PhyTree.h  PhyTree.hpp  README.md  Sequence.cpp  Sequence.hpp  SubstitutionModel.cpp  SubstitutionModel.hpp  TreeRearrangment.cpp  TreeRearrangment.hpp  TreeSearch.cpp  TreeSearchEngine.cpp  TreeSearchEngine.hpp  Utilities.hpp  Utree.cpp  Utree.hpp  docs  main.cpp  main.h  newick.cpp  newick.hpp  (+2 more)
test/: CMakeLists.txt  basic_tests.cpp
tests/unit_tests/: CMakeLists.txt  testData.hpp  tshlib_utree_test.cpp
